appsrv.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appsrv
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: appsrv
  template:
    metadata:
      labels:
        k8s-app: appsrv
    spec:
      containers:
      - image: app/appsrv
        name: appsrv
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: appsrv
  namespace: app
spec:
  ports:
  - port: 8080
  selector:
    k8s-app: appsrv
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: appsrv
  namespace: app
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "acme-prod"
spec:
  tls:
  - hosts:
    - appsrv.example.com
    secretName: appsrv
  rules:
  - host: appsrv.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: appsrv
          servicePort: 8080
