deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wetalk
  namespace: wetalk
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: wetalk
  template:
    metadata:
      labels:
        k8s-app: wetalk
    spec:
      containers:
      - image: wetalk/wetalk
        name: wetalk
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: wetalk
  namespace: wetalk
spec:
  ports:
  - port: 8080
  selector:
    k8s-app: wetalk
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wetalk
  namespace: wetalk
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "acme-prod"
spec:
  tls:
  - hosts:
    - devto.icu
    secretName: wetalk
  rules:
  - host: devto.icu
    http:
      paths:
      - path: /
        backend:
          serviceName: wetalk
          servicePort: 8080
